<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ly_top_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_topbar"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="4sp"
            android:text="@string/tab_menu_add"
            android:textColor="#ffffff"
            android:textSize="28dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/add_et_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Name" />

    <EditText
        android:id="@+id/add_et_UUID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/UUID" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableRow>

            <EditText
                android:id="@+id/add_et_Major"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/Major" />

            <EditText
                android:id="@+id/add_et_Minor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/Minor" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/add_et_X"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/X" />

            <EditText
                android:id="@+id/add_et_Y"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/Y" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/add_button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/anniu"
            android:text="@string/save"
            android:textColor="#ffffff" />

        <View
            android:layout_width="70dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/add_button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/anniu"
            android:text="@string/delete"
            android:textColor="#ffffff" />

    </LinearLayout>

</LinearLayout>

